--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,51 @@ legend {
   font-family: 'Lobster', cursive;
 }
 
+.navbar {
+  background-color: #ad1d28;
+  border-color: #911821;
+}
+
+.navbar-brand {
+  font-family: 'Lobster', cursive;
+  color: #fff;
+}
+
+.card {
+  background-color: #469ea8;
+  padding: 1rem;
+}
+
+.card-primary {
+  border-color: #a2ced3;
+  margin-bottom: 0.5rem;
+}
+
+.banner {
+  margin-top: 4em;
+  border-bottom: 1px solid #469ea8;
+  margin-bottom: 1.5em;
+  padding-bottom: 0.5em;
+}
+
+.review-header {
+  background-color: #31727a;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.review {
+  margin-right: -16px;
+  margin-left: -16px;
+  margin-bottom: 0.5em;
+}
+
+.badge-default, .btn-primary {
+  background-color: #ad1d28;
+  border-color: #911821;
+}
+
 h4 a, h4 a:hover {
   color: #fff;
 }
@@ -22,8 +67,16 @@ h1 small {
   color: #aaa;
 }
 
+.address {
+  margin-bottom: 0.5rem;
+}
+
+.facilities span.badge {
+  margin-right: 2px;
+}
+
 p {
-  margin-bottom: 0.65rem;
+    margin-bottom: 0.65rem;
 }
 
 a {
@@ -37,5 +90,5 @@ a:hover {
 body {
   font-family: "Cabin", Arial, sans-serif;
   color: #fff;
-  background-color:#108a93;
+  background-color: #108a93;
 }
