--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,11 @@
 @import url("//fonts.googleapis.com/css?family=Lobster|Cabin:400,700");
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Lobster', cursive;
 }
 
@@ -13,9 +18,24 @@ legend {
   border-color: #911821;
 }
 
-.navbar-brand {
+.navbar-light .navbar-brand {
   font-family: 'Lobster', cursive;
   color: #fff;
+}
+
+.navbar-light .navbar-toggler {
+  color: white;
+  border-color: white;
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svgxml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
+}
+
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: white;
 }
 
 .card {
@@ -26,6 +46,7 @@ legend {
 .card-primary {
   border-color: #a2ced3;
   margin-bottom: 0.5rem;
+  color: #fff;
 }
 
 .banner {
@@ -48,12 +69,14 @@ legend {
   margin-bottom: 0.5em;
 }
 
-.badge-default, .btn-primary {
+.badge-default,
+.btn-primary {
   background-color: #ad1d28;
   border-color: #911821;
 }
 
-h4 a, h4 a:hover {
+h4 a,
+h4 a:hover {
   color: #fff;
 }
 
@@ -76,15 +99,26 @@ h1 small {
 }
 
 p {
-    margin-bottom: 0.65rem;
+  margin-bottom: 0.65rem;
 }
 
 a {
-  color: rgba(255, 255, 255, 0.8)
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  padding-right: 6px;
 }
 
 a:hover {
-  color:#fff
+  color: #fff;
+}
+
+.fa-star{
+  color: #aaa;
+  font-size: medium;
+}
+
+span.badge.badge-warning {
+  background-color: #FFC436;
 }
 
 body {
